--- a/index.html
+++ b/index.html
@@ -231,15 +231,14 @@
     <script>
       document.querySelectorAll(".github").forEach(img => {
     img.addEventListener("click", function(event) {
-        console.log('GitHub image clicked'); // Check if this is triggered
-        event.preventDefault(); // Prevent GitHub link from opening
+        console.log('GitHub image clicked');
+        event.preventDefault();      
         
-        // Find the closest .links container, and then get the live demo link
         const liveDemoLink = this.closest(".links").querySelector(".live-page");
         
         if (liveDemoLink) {
-            console.log('Opening Live Demo: ', liveDemoLink.href); // Check if the link is correct
-            window.open(liveDemoLink.href, "_blank"); // Open the live demo link
+            console.log('Opening Live Demo: ', liveDemoLink.href); 
+            window.open(liveDemoLink.href, "_blank"); 
         } else {
             console.log('No Live Demo link found!');
         }
