--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <h1>ANJALI RAO</h1>
         <h3>FRONTEND UTVIKLER</h3>
         <div class="btn-container">
-            <a href="#" class="btn-cv" onclick="window.open='./#contact'"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
-            <a href="#" class="btn-kontakt" onclick="location.href='./#contact'">Kontakt Info</a>
+            <a href="IMAGES/Anjali_CV.pdf" class="btn-cv"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
+            <a href="#contact-section" class="btn-kontakt">Kontakt Info</a>
           </button>
         </div>
         <div class="social-media">
@@ -67,7 +67,7 @@
     <section id="about-section">
       <h2 class="about-me">OM MEG</h2>
       <div class="about-content">
-      <div class="pic_container"><img src="images/My_Img1.PNG" alt="profile_img">
+      <div class="pic_container"><img src="IMAGES/My_Img1-removebg-preview.png" alt="profile_img">
       </div>
       <div class="about-container">
         <div class="details-container"><p class="abt_txt_1">Hei, jeg heter Anjali Rao, og jeg er entusiastisk over muligheten til å bygge en karriere innen teknologi.</p>
@@ -158,7 +158,7 @@
                     <a href="https://www.figma.com/design/pRbLZl6snrXwF1S6EfDY7D/Oppgave-Figma-Basic-Assignment-2%3A-Replicating-a-site-using-Auto-Layout?t=bs4MsIIkSZROp4pM-0" class="se-more">
                       Se mer
                     </a>
-                    <a href="https://www.figma.com/proto/ebAdU11yR8B41buoU2MGcI/Design-system?node-id=1-170&t=RnVGibg41o1WtLHP-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" 
+                    <a href="https://www.figma.com/proto/gbzcOBOl1zXsdAmOXm32y4/Design-System?node-id=30-42&t=e5VIjmTiW85aw1fQ-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" 
                     target="_blank" class="live-page">
                       Live Demo
                     </a>
