--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <h1>ANJALI RAO</h1>
         <h3>FRONTEND UTVIKLER</h3>
         <div class="btn-container">
-            <a href="IMAGES/Anjali_CV.pdf" class="btn-cv"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
+            <a href="IMAGES/Anjali_CV.pdf" class="btn-cv" target="_blank"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
             <a href="#contact-section" class="btn-kontakt">Kontakt Info</a>
           </button>
         </div>
         <div class="social-media">
-            <a href="#"><i class="fa-brands fa-linkedin" onclick="location.href='https:www.linkedin.com/in/anjaliraok'"></i></a>
-            <a href="#"><i class="fa-brands fa-github" onclick="location.href='https://github.com/Anjali02-rao'"></i></a>
+            <a href="https://linkedin.com/in/anjaliraok" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Anjali02-rao" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
       </div>
     </section>
@@ -67,7 +67,7 @@
     <section id="about-section">
       <h2 class="about-me">OM MEG</h2>
       <div class="about-content">
-      <div class="pic_container"><img src="IMAGES/My_Img1-removebg-preview.png" alt="profile_img">
+      <div class="pic_container"><img src="IMAGES/Anjali.png" alt="profile_img">
       </div>
       <div class="about-container">
         <div class="details-container"><p class="abt_txt_1">Hei, jeg heter Anjali Rao, og jeg er entusiastisk over muligheten til å bygge en karriere innen teknologi.</p>
@@ -79,7 +79,6 @@
             <a href="IMAGES/Anjali_CV.pdf" class="cv_btn" target="_blank"><img src="IMAGES/download.png" alt="CV" class="download">CV</a>
         </div>
       </div>
-    <!-- </div> -->
     </section>
 
     <section id="experience-section">
@@ -238,8 +237,8 @@
         </p>
 
         <div class="social-media">
-          <a href="#"><i class="fa-brands fa-linkedin" onclick="location.href='https:www.linkedin.com/in/anjaliraok'"></i></a>
-          <a href="#"><i class="fa-brands fa-github" onclick="location.href='https://github.com/Anjali02-rao'"></i></a>
+          <a href="https://linkedin.com/in/anjaliraok" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/Anjali02-rao" target="_blank"><i class="fa-brands fa-github"></i></a>
       </div>
         <a href="#contact" id="scroll-to-top"
           ><img src="IMAGES/bxs_up-arrow.png" alt="Top" />
