--- a/index.html
+++ b/index.html
@@ -146,8 +146,11 @@
             </div>
           </div>
 
-          <div class="prj_box">     
-            <img src="IMAGES/webpage redesign.png" alt="prj3" class="prj-img">
+          <div class="prj_box">    
+            <a href="https://www.figma.com/proto/gbzcOBOl1zXsdAmOXm32y4/Design-System?node-id=30-42&t=e5VIjmTiW85aw1fQ-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" 
+                    target="_blank">
+              <img src="IMAGES/webpage redesign.png" alt="prj3" class="prj-img">
+            </a> 
             <div class="project_description">
               <p>Dette prosjektet er en fullstendig redesign av Elkjøp-nettsiden, <br> laget i Figma for å forbedre brukergrensesnittet, visuell appell og brukervennlighet.</p>
               <div class="technology">
