--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </a>
         <div class="project_description">          
           <p>Denne appen bruker Gutendex API for å vise en liste over bøker og deres detaljer.
-            <br>Velg blant gratis bøker, last dem ned eller les dem på nettet. </p>
+            <br>Velg blant gratis bøker og les dem på nettet. </p>
             <div class="technology">
              <h3>HTML, CSS, JAVASCRIPT, REACT</h3>
             </div> 
