--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             <br>Utover koding finner jeg enorm glede i kreativitet, og kanaliserer ofte fantasien min på lerret gjennom kunst. Dette kreative utsalgsstedet gir næring til min evne til å tenke utenfor boksen og nærme problemer med et nytt perspektiv – egenskaper som jeg tror vil forbedre arbeidet mitt som frontend-utvikler.
           </p>
             
-            <a href="IMAGES/Anjali_CV.pdf" class="cv_btn" target="_blank"><img src="IMAGES/download.png" alt="CV" class="download">CV</a>
+            <a href="IMAGES/CV_Anjali.pdf" class="cv_btn btn-fill-center" target="_blank">
+              <span class="btn-fill-center-text btn-fill-center-text--gray">
+              <img src="IMAGES/download.png" alt="CV" class="download">CV</a>
+              </span>
         </div>
       </div>
     </section>
