--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>ANJALI RAO</h1>
         <h3>FRONTEND UTVIKLER</h3>
         <div class="btn-container">
-            <a href="IMAGES/Anjali_CV.pdf" class="btn-cv" target="_blank"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
+            <a href="IMAGES/CV_Anjali.pdf" class="btn-cv" target="_blank"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
             <a href="#contact-section" class="btn-kontakt">Kontakt Info</a>
           </button>
         </div>
@@ -77,7 +77,7 @@
           </p>
             
             <a href="IMAGES/CV_Anjali.pdf" class="cv_btn btn-fill-center" target="_blank">
-              <span class="btn-fill-center-text btn-fill-center-text--gray">
+              <span class="btn-fill-center-text">
               <img src="IMAGES/download.png" alt="CV" class="download">CV</a>
               </span>
         </div>
