--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>ANJALI RAO</h1>
         <h3>FRONTEND UTVIKLER</h3>
         <div class="btn-container">
-            <a href="IMAGES/CV_Anjali.pdf" class="btn-cv" target="_blank"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
+            <a href="IMAGES/Anjali_masterCV norsk.pdf" class="btn-cv" target="_blank"><img src="IMAGES/download.png" alt="CV" class="dnl-img">CV</a>
             <a href="#contact-section" class="btn-kontakt">Kontakt Info</a>
           </button>
         </div>
@@ -76,7 +76,7 @@
             <br>Utover koding finner jeg enorm glede i kreativitet, og kanaliserer ofte fantasien min på lerret gjennom kunst. Dette kreative utsalgsstedet gir næring til min evne til å tenke utenfor boksen og nærme problemer med et nytt perspektiv – egenskaper som jeg tror vil forbedre arbeidet mitt som frontend-utvikler.
           </p>
             
-            <a href="IMAGES/CV_Anjali.pdf" class="cv_btn btn-fill-center" target="_blank">
+            <a href="IMAGES/Anjali_masterCV norsk.pdf" class="cv_btn btn-fill-center" target="_blank">
               <span class="btn-fill-center-text">
               <img src="IMAGES/download.png" alt="CV" class="download">CV</a>
               </span>
